# snake_bevy_wasm_pwa

./: Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md
automation_tasks_rs/: Cargo.toml  README.md
automation_tasks_rs/src/: build_cli_bin_mod.rs  build_wasm_mod.rs  main.rs  tasks_mod.rs
automation_tasks_rs/src/encrypt_decrypt_with_ssh_key_mod/: encrypt_decrypt_mod.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/search.desc/snake_bevy_wasm_pwa/: snake_bevy_wasm_pwa-desc-0-.js
docs/snake_bevy_wasm_pwa/: all.html  enum.LibraryError.html  fn.wasm_bindgen_start.html  index.html  sidebar-items.js
docs/snake_bevy_wasm_pwa/main_mod/: fn.get_args_from_hash_fragment.html  fn.header.html  fn.main.html  fn.on_click_btn_run.html  fn.on_hash_change.html  fn.page_with_inputs.html  fn.print_greet_name.html  fn.print_help.html  fn.routing_by_arguments.html  fn.upper_greet_name.html  index.html  sidebar-items.js
docs/snake_bevy_wasm_pwa/main_mod/lib_mod/: constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  enum.LibraryError.html  index.html  sidebar-items.js
docs/snake_bevy_wasm_pwa/main_mod/lib_mod/hello_mod/: fn.format_hello_phrase.html  fn.format_upper_hello_phrase.html  fn.make_uppercase.html  index.html  sidebar-items.js
docs/src/snake_bevy_wasm_pwa/: lib.rs.html  main_mod.rs.html
docs/src/snake_bevy_wasm_pwa/main_mod/: lib_mod.rs.html
docs/trait.impl/core/error/: trait.Error.js
docs/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
publish_script/: snake_bevy_wasm_pwa_publish.sh
src/: lib.rs  main_mod.rs
src/main_mod/lib_mod/: hello_mod.rs  web_sys_mod.rs
src/main_mod/lib_mod/web_sys_mod/: html_source_code_mod.rs
web_server_folder/snake_bevy_wasm_pwa/: index.html  manifest.json  service_worker.js
(+19 files in other folders)
